# models/topicModel.go
@@ -1,0 +1,14 @@
+package models
+
+type TopicData struct {
+	Topic0       string
+	Topic1       string
+	Topic2       string
+	Topic3       string
+	Topic0_1_opr string
+	Topic0_2_opr string
+	Topic0_3_opr string
+	Topic1_2_opr string
+	Topic1_3_opr string
+	Topic2_3_opr string
+}
